--- a/app/src/main/res/layout/activity_superviser_list.xml
+++ b/app/src/main/res/layout/activity_superviser_list.xml
@@ -10,9 +10,9 @@
     <RelativeLayout
         android:id="@+id/search_field"
         android:layout_width="wrap_content"
-        android:layout_height="36dp"
+        android:layout_height="40dp"
         android:layout_margin="16dp"
-        android:background="@android:color/white"
+        android:background="@drawable/search_field"
         android:elevation="12dp">
 
         <AutoCompleteTextView
@@ -56,6 +56,13 @@
                 />
 
         </android.support.v4.widget.SwipeRefreshLayout>
+
+        <Button
+            android:layout_alignParentBottom="true"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Показать ещё"
+            style="@style/ButtonBlueReception"/>
 
     </RelativeLayout>
 
