--- a/app/src/main/res/layout-xlarge/activity_manager_edreception.xml
+++ b/app/src/main/res/layout-xlarge/activity_manager_edreception.xml
@@ -10,12 +10,12 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp">
+        android:layout_height="80dp">
 
         <ImageView
             android:id="@+id/iv_status"
-            android:layout_width="32dp"
-            android:layout_height="40dp"
+            android:layout_width="64dp"
+            android:layout_height="80dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:background="@color/otpravitelRed"
@@ -531,7 +531,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="20"
-                        app:srcCompat="@drawable/ic_gruzovik_blue_24dp" />
+                        app:srcCompat="@drawable/gruzovik_blue" />
 
                     <Spinner
                         android:id="@+id/mactv_kuda"
@@ -717,18 +717,6 @@
                             android:hint="Экспедиторская расписка"
                             style="@style/ButtonBlueReception"/>
 
-                        <Button
-                            android:id="@+id/btn_posmotret"
-                            android:layout_width="match_parent"
-                            android:hint="Посмотреть"
-                            style="@style/ButtonBlueReception"/>
-
-                        <Button
-                            android:id="@+id/btn_akt"
-                            android:layout_width="match_parent"
-                            android:hint="Сформировать Акт"
-                            style="@style/ButtonBlueReception"/>
-
                     </LinearLayout>
 
                     <LinearLayout
@@ -737,24 +725,6 @@
                         android:orientation="vertical"
                         android:layout_weight="50"
                         android:padding="20dp">
-
-                        <Button
-                            android:id="@+id/btn_schet"
-                            android:layout_width="match_parent"
-                            android:hint="Счет на оплату"
-                            style="@style/ButtonBlueReception"/>
-
-                        <Button
-                            android:id="@+id/btn_zagruzit"
-                            android:layout_width="match_parent"
-                            android:hint="Загрузить"
-                            style="@style/ButtonBlueReception"/>
-
-                        <Button
-                            android:id="@+id/btn_etiketka_klient"
-                            android:layout_width="match_parent"
-                            android:hint="Этикетка для клиента"
-                            style="@style/ButtonBlueReception" />
 
                         <Button
                             android:id="@+id/btn_foto_gruza"
