--- a/app/src/main/res/layout-xlarge/activity_manager_list.xml
+++ b/app/src/main/res/layout-xlarge/activity_manager_list.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="72dp"
         android:layout_margin="16dp"
-        android:background="@android:color/white"
+        android:background="@drawable/search_field"
         android:elevation="12dp">
 
         <AutoCompleteTextView
@@ -57,16 +57,23 @@
 
         <ImageButton
             android:id="@+id/btn_dobavit_zayavku"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
             android:background="@drawable/white"
             android:elevation="10dp"
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
             android:layout_marginBottom="32dp"
             android:layout_marginRight="32dp"
-            android:src="@drawable/ic_fab_blue_24dp"
+            app:srcCompat="@drawable/ic_add"
             />
+
+        <Button
+            android:layout_alignParentBottom="true"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:hint="Показать ещё"
+            style="@style/ButtonBlueReception"/>
 
     </RelativeLayout>
 
