--- a/app/src/main/res/layout/activity_manager_list.xml
+++ b/app/src/main/res/layout/activity_manager_list.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="36dp"
         android:layout_margin="16dp"
-        android:background="@android:color/white"
+        android:background="@drawable/search_field"
         android:elevation="12dp">
 
         <AutoCompleteTextView
@@ -65,8 +65,15 @@
             android:layout_alignParentEnd="true"
             android:layout_marginBottom="32dp"
             android:layout_marginRight="32dp"
-            android:src="@drawable/ic_fab_blue_24dp"
+            app:srcCompat="@drawable/ic_add"
             />
+
+        <Button
+            android:layout_alignParentBottom="true"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Показать ещё"
+            style="@style/ButtonBlueReception"/>
 
     </RelativeLayout>
 
