--- a/app/src/main/res/layout/manager_list.xml
+++ b/app/src/main/res/layout/manager_list.xml
@@ -124,7 +124,7 @@
                         android:id="@+id/iv_strela"
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
-                        app:srcCompat="@drawable/ic_gruzovik_blue_24dp" />
+                        app:srcCompat="@drawable/gruzovik_blue" />
                 </LinearLayout>
 
                 <LinearLayout
