--- a/app/src/main/res/layout-large/activity_superviser_list.xml
+++ b/app/src/main/res/layout-large/activity_superviser_list.xml
@@ -52,17 +52,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tools:layout_editor_absoluteX="8dp"
-                tools:layout_editor_absoluteY="8dp"
-                />
+                tools:layout_editor_absoluteY="8dp">
+
+
+
+            </ListView>
 
         </android.support.v4.widget.SwipeRefreshLayout>
-
-        <Button
-            android:layout_alignParentBottom="true"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Показать ещё"
-            style="@style/ButtonBlueReception"/>
 
     </RelativeLayout>
 
