Revert "autoCompleteTextView and NewManagerReception`s data to ReceptionManager"

--- a/app/src/main/res/layout-large/activity_manager_edreception.xml
+++ b/app/src/main/res/layout-large/activity_manager_edreception.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:weightSum="100"
-    tools:context=".ManagerApp.ManagerListFiles.EditReceptionManagerActivity">
+    tools:context=".ManagerApp.ManagerListFiles.ReceptionManagerActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -86,19 +86,12 @@
                         android:text="Заказчик: "
                         style="@style/TextBlueReception"/>
 
-                    <!--<Spinner
+                    <Spinner
                         android:id="@+id/mactv_z_zakazchik"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="//заказчик"
-                        style="@style/TextBlueReception"/>-->
-
-                    <AutoCompleteTextView
-                        android:id="@+id/autoComplete_zakazchik"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:completionHint="Введите заказчика"
-                        android:completionThreshold="3"/>
+                        style="@style/TextBlueReception"/>
 
                 </LinearLayout>
 
@@ -526,22 +519,13 @@
                     android:orientation="horizontal"
                     android:weightSum="100">
 
-                    <!--<Spinner
+                    <Spinner
                         android:id="@+id/mactv_otkuda"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="40"
                         android:elevation="10dp"
-                        style="@style/TextGreyRec"/>-->
-
-                    <AutoCompleteTextView
-                        android:id="@+id/autoComplete_otkuda"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="40"
-                        android:elevation="10dp"
-                        android:completionHint="Введите город"
-                        android:completionThreshold="3"/>
+                        style="@style/TextGreyRec"/>
 
                     <ImageView
                         android:layout_width="wrap_content"
@@ -549,22 +533,13 @@
                         android:layout_weight="20"
                         app:srcCompat="@drawable/gruzovik_blue" />
 
-                    <!--<Spinner
+                    <Spinner
                         android:id="@+id/mactv_kuda"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="40"
                         android:elevation="10dp"
-                        style="@style/TextGreyRec"/>-->
-
-                    <AutoCompleteTextView
-                        android:id="@+id/autoComplete_kuda"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="40"
-                        android:elevation="10dp"
-                        android:completionHint="Введите город"
-                        android:completionThreshold="3"/>
+                        style="@style/TextGreyRec"/>
 
                 </LinearLayout>
 
