--- a/app/src/main/res/layout-xlarge/activity_manager_reception.xml
+++ b/app/src/main/res/layout-xlarge/activity_manager_reception.xml
@@ -633,12 +633,12 @@
                             android:text="Стоимость: "
                             style="@style/TextBlueRecBold"/>
 
-                        <TextView
-                            android:id="@+id/tv_stoimost"
+                        <EditText
+                            android:id="@+id/et_stoimost"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="100"
-                            android:text=""
+                            android:text="//стоимость"
                             style="@style/TextDarkBlueBold"/>
 
                     </LinearLayout>
