--- a/app/src/main/res/layout/activity_manager_newreception.xml
+++ b/app/src/main/res/layout/activity_manager_newreception.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:weightSum="100"
     tools:context=".ManagerApp.ManagerListFiles.NewReceptionManagerActivity">
@@ -82,7 +83,7 @@
                     android:text="Заказчик: "
                     style="@style/TextBlueReception" />
 
-                <Spinner
+                <AutoCompleteTextView
                     android:id="@+id/et_z_zakazchik"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -101,7 +102,7 @@
                     android:text="Почта: "
                     style="@style/TextBlueReception" />
 
-                <EditText
+                <TextView
                     android:id="@+id/et_z_pochta"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
